# rci-memory-lender

./: .gitignore  Doxyfile  Makefile  README.md  annotated.html  buffer.hpp  buffer_8hpp_source.html  classbuffer__ptr-members.html  classbuffer__ptr.html  classes.html  classlibrary-members.html  classlibrary.html  classmailbox-members.html  classmailbox.html  classrecycle__memory-members.html  classrecycle__memory.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  lender.hpp  lender_8hpp_source.html  library.hpp  library_8hpp_source.html  mailbox.hpp  mailbox_8hpp_source.html  main.cpp  md_README.html  pages.html  r3.hpp  recycler.hpp  recycler_8hpp_source.html  structbuffer__deleter-members.html  structbuffer__deleter.html
.github/workflows/: cpp-linter.yml  (+2 more)
design_doc/: design.md  survey.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
testing/: CMakeLists.txt  google_test.cpp  test_class.cpp  test_class.hpp  test_impl.hpp  test_mail_class.hpp  test_mail_impl.hpp
testing/test_suites/: basic_functions_test.cpp  buffer_recycler_test.cpp  concurrency_test.cpp  debug_test.cpp  google_test.cpp  library_test.cpp  mailbox_test.cpp  pipeline_test.cpp
